inc/xcp.h

    /* DAQ List Modes. */
    #define XCP_DAQ_LIST_MODE_ALTERNATING UINT8(0x01)
    #define XCP_DAQ_LIST_MODE_DIRECTION   UINT8(0x02)
    #define XCP_DAQ_LIST_MODE_TIMESTAMP   UINT8(0x10)
    #define XCP_DAQ_LIST_MODE_PID_OFF     UINT8(0x20)
    #define XCP_DAQ_LIST_MODE_SELECTED    UINT8(0x40)
    #define XCP_DAQ_LIST_MODE_STARTED     UINT8(0x80)
    typedef XCP_DAQ_ENTITY_TYPE XcpDaq_ListIntegerType;
    typedef XCP_DAQ_ENTITY_TYPE XcpDaq_ODTIntegerType;
    typedef XCP_DAQ_ENTITY_TYPE XcpDaq_ODTEntryIntegerType;
    typedef enum tagXcp_ReturnType {
        ERR_CMD_SYNCH = UINT8(0x00), /* Command processor synchronization. S0 */

        ERR_CMD_BUSY   = UINT8(0x10), /* Command was not executed. S2 */
        ERR_DAQ_ACTIVE = UINT8(0x11), /* Command rejected because DAQ is running. S2 */
        ERR_PGM_ACTIVE = UINT8(0x12), /* Command rejected because PGM is running. S2 */

        ERR_CMD_UNKNOWN  = UINT8(0x20),      /* Unknown command or not implemented optional command. S2 */
        ERR_CMD_SYNTAX   = UINT8(0x21),      /* Command syntax invalid   S2 */
        ERR_OUT_OF_RANGE = UINT8(0x22),      /* Command syntax valid but command
                                                           parameter(s) out of range.   S2 */
        ERR_WRITE_PROTECTED   = UINT8(0x23), /* The memory location is write protected. S2 */
        ERR_ACCESS_DENIED     = UINT8(0x24), /* The memory location is not accessible. S2 */
        ERR_ACCESS_LOCKED     = UINT8(0x25), /* Access denied, Seed & Key is required S2 */
        ERR_PAGE_NOT_VALID    = UINT8(0x26), /* Selected page not available    S2 */
        ERR_MODE_NOT_VALID    = UINT8(0x27), /* Selected page mode not available    S2 */
        ERR_SEGMENT_NOT_VALID = UINT8(0x28), /* Selected segment not valid S2 */
        ERR_SEQUENCE          = UINT8(0x29), /* Sequence error          S2 */
        ERR_DAQ_CONFIG        = UINT8(0x2A), /* DAQ configuration not valid        S2 */

        ERR_MEMORY_OVERFLOW = UINT8(0x30), /* Memory overflow error S2 */
        ERR_GENERIC         = UINT8(0x31), /* Generic error.         S2 */
        ERR_VERIFY          = UINT8(0x32), /* The slave internal program verify routine detects
                                                             an error.   S3 */

        /* NEW IN 1.1 */
        ERR_RESOURCE_TEMPORARY_NOT_ACCESSIBLE = UINT8(0x33), /* Access to the requested resource is temporary not
                                                                          possible.   S3 */
        ERR_TIMECORR_STATE_CHANGE = UINT8(0x34),             /* State change occurred during time correlation. S3 */
        /* Internal Success Code - not related to XCP spec. */
        ERR_SUCCESS = UINT8(0xff)
    } Xcp_ReturnType;
    typedef struct tagXcpDaq_MtaType {
        #if XCP_DAQ_ENABLE_ADDR_EXT == XCP_ON
        uint8_t ext;
        #endif /* XCP_DAQ_ENABLE_ADDR_EXT */
        Xcp_PointerSizeType address;
    } XcpDaq_MtaType;
    typedef enum tagXcpDaq_ProcessorStateType {
        XCP_DAQ_STATE_UNINIT         = 0,
        XCP_DAQ_STATE_CONFIG_INVALID = 1,
        XCP_DAQ_STATE_CONFIG_VALID   = 2,
        XCP_DAQ_STATE_STOPPED        = 3,
        XCP_DAQ_STATE_RUNNING        = 4
    } XcpDaq_ProcessorStateType;
    typedef struct tagXcpDaq_ProcessorType {
        XcpDaq_ProcessorStateType state;
    } XcpDaq_ProcessorType;
    typedef struct tagXcpDaq_PointerType {
        XcpDaq_ListIntegerType     daqList;
        XcpDaq_ODTIntegerType      odt;
        XcpDaq_ODTEntryIntegerType odtEntry;
    } XcpDaq_PointerType;
    typedef struct tagXcpDaq_ODTEntryType {
        XcpDaq_MtaType mta;
        #if XCP_DAQ_ENABLE_BIT_OFFSET == XCP_ON
        uint8_t bitOffset;
        #endif /* XCP_DAQ_ENABLE_BIT_OFFSET */
        uint32_t length;
    } XcpDaq_ODTEntryType;
    typedef struct tagXcpDaq_ODTType {
        XcpDaq_ODTEntryIntegerType numOdtEntries;
        uint16_t                   firstOdtEntry;
    } XcpDaq_ODTType;
    typedef struct tagXcpDaq_DynamicListType {
        XcpDaq_ODTIntegerType numOdts;
        uint16_t              firstOdt;
        uint8_t               mode;
        #if XCP_DAQ_ENABLE_PRESCALER == XCP_ON
        uint8_t prescaler;
        uint8_t counter;
        #endif /* XCP_DAQ_ENABLE_PRESCALER */
    } XcpDaq_DynamicListType;
    typedef struct tagXcpDaq_ListConfigurationType {
        XcpDaq_ODTIntegerType numOdts;
        uint16_t              firstOdt;
    } XcpDaq_ListConfigurationType;
    typedef struct tagXcpDaq_ListStateType {
        uint8_t mode;
        #if XCP_DAQ_ENABLE_PRESCALER == XCP_ON
        uint8_t prescaler;
        uint8_t counter;
        #endif /* XCP_DAQ_ENABLE_PRESCALER */
    } XcpDaq_ListStateType;
    typedef enum tagXcpDaq_EntityKindType {
        XCP_ENTITY_UNUSED,
        XCP_ENTITY_DAQ_LIST,
        XCP_ENTITY_ODT,
        XCP_ENTITY_ODT_ENTRY
    } XcpDaq_EntityKindType;
    typedef struct tagXcpDaq_EntityType {
        /*Xcp_DaqEntityKindType*/
        uint8_t kind;

        union {
            XcpDaq_ODTEntryType    odtEntry;
            XcpDaq_ODTType         odt;
            XcpDaq_DynamicListType daqList;
        } entity;
    } XcpDaq_EntityType;
    typedef struct tagXcpDaq_EventType {
        uint8_t const * const name;
        uint8_t               nameLen;
        uint8_t               properties;
        uint8_t               timeunit;
        uint8_t               cycle;
        /* unit8_t priority; */
    } XcpDaq_EventType;
    typedef struct tagXcpDaq_MessageType {
        uint8_t        dlc;
        uint8_t const *data;
    } XcpDaq_MessageType;